--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,15 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.java.home=C:\\Program Files\\Java\\jdk1.8.0_241
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
 	minecraft_version=b1.7.3
 	yarn_mappings=fd6626e
 	loader_version=671a1bb
+	stapi_version=ce9d661
 
 # Mod Properties
-	mod_version = 1.1.0
+	mod_version = 1.0.0
 	maven_group = net.glass-launcher
-	archives_base_name = BIN-fabric-example-mod
+	archives_base_name = InvTweaks
