--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,7 @@ dependencies {
 	compile 'org.jetbrains:annotations:16.0.2'
 
 	modImplementation "com.github.minecraft-cursed-legacy:cursed-fabric-loader:${project.loader_version}"
+	modImplementation "com.github.modificationstation:StationAPI:${project.stapi_version}"
 }
 
 processResources {
